parser/tests/bad/str03-1.st
% max length of a 'string' must be in range 1 ~ 255
%   non-positive length

var str: string(0)
